data/gcp/gpt-2-large-tf/provider_project/sample-44/main.tf
terraform {
  required_providers {
    google = {
      source = "hashicorp/google"
    }
  }
}

# google provider block. Use project terraform-338909 and zone europe west4
resource "google_compute_firewall" "name_0" {
  name    = "my-firewall-default"
  network = "default"

  allow {
    protocol = "tcp"
    ports    = ["22"]
  }

  source_ranges = ["0.0.0.0/0"]

  allow {
    protocol = "udp"
    ports    = ["80"]
  }

  target_tags = ["my-firewall-default"]
}
